crates/phynix-parse/tests/stmt/snapshots/tests__stmt__error_recovery__class_member_single_error.snap
---
source: crates/phynix-parse/tests/stmt/error_recovery.rs
expression: "(script, diags)"
---
- items:
    - Class:
        flags: 0
        name:
          Qualified:
            absolute: false
            parts:
              - {}
        extends: ~
        implements: []
        body:
          - Property:
              name: {}
              flags: 1
              set_visibility: ~
              type_annotation: ~
              default: ~
              hooks: ~
        attributes: []
- - code:
      Parse:
        ExpectedToken:
          expected:
            - VarIdent
    message: "expected 'variable'"
    severity: Error
    span:
      start: 24
      end: 24
    labels: []
    notes: []
    help: ~
    fixes: []
