crates/phynix-parse/tests/stmt/snapshots/tests__stmt__error_recovery__class_missing_name_recovery.snap
---
source: crates/phynix-parse/tests/stmt/error_recovery.rs
expression: "(script, diags)"
---
- items:
    - Class:
        flags: 0
        name:
          Qualified:
            absolute: false
            parts:
              - {}
        extends: ~
        implements: []
        body: []
        attributes: []
- - code:
      Parse: ExpectedIdent
    message: expected identifier
    severity: Error
    span:
      start: 11
      end: 11
    labels: []
    notes: []
    help: ~
    fixes: []
