crates/phynix-parse/tests/stmt/snapshots/tests__stmt__error_recovery__for_missing_semicolon_recovery.snap
---
source: crates/phynix-parse/tests/stmt/error_recovery.rs
assertion_line: 25
expression: "(script, diags)"
---
- items:
    - For:
        init:
          Assign:
            target:
              VarRef:
                name: {}
            value:
              IntLiteral:
                value: 0
        cond:
          BinaryOp:
            op: CmpLt
            left:
              VarRef:
                name: {}
            right:
              IntLiteral:
                value: 10
        increment:
          PostfixInc:
            target:
              VarRef:
                name: {}
        body:
          items:
            - Echo:
                exprs:
                  - VarRef:
                      name: {}
- - code:
      Parse:
        ExpectedToken:
          expected:
            - Semicolon
    message: "expected ';'"
    severity: Error
    span:
      start: 11
      end: 11
    labels: []
    notes: []
    help: ~
    fixes: []
